--- a/demo-display-flex-order.html
+++ b/demo-display-flex-order.html
@@ -39,7 +39,7 @@
       <ul id="mainNavItems" class="mainNavItems displayNone" role="list">
         <li>Container Properties
           <ol>
-            <li><a href="./demo-display-flex-default-effects.html">display: flex</a></li>
+            <li><a href="./index.html">display: flex</a></li>
             <li><a href="./demo-display-flex-flex-direction.html">flex-direction</a></li>
             <li><a href="./demo-display-flex-flex-direction-flex-wrap.html">flex-wrap</a></li>
             <li><a href="./demo-display-flex-justify-content.html">justify-content</a></li>
